force-app/main/default/objects/Interface_Log__c/fields/HTTP_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Result_Code__c</fullName>
    <description>Returns Result Code of HTTP request</description>
    <label>HTTP Result Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>