force-app/main/default/objects/Interface_Log__c/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <description>Customer from SAP, Quote to SAP, etc</description>
    <label>Interface Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agreement Action</fullName>
            </value>
            <value>
                <fullName>Agreement Email Receiver</fullName>
            </value>
            <value>
                <fullName>Agreement Validate</fullName>
            </value>
            <value>
                <fullName>Agreement Validate Error</fullName>
            </value>
            <value>
                <fullName>Case (Proactive) Outbound</fullName>
            </value>
            <value>
                <fullName>Contract Outbound</fullName>
            </value>
            <value>
                <fullName>Currency Sync Outbound</fullName>
            </value>
            <value>
                <fullName>Customer Hierarchy Outbound</fullName>
            </value>
            <value>
                <fullName>Customer Inbound</fullName>
            </value>
            <value>
                <fullName>Customer Outbound</fullName>
            </value>
            <value>
                <fullName>Customer Specific Pricing Inbound</fullName>
            </value>
            <value>
                <fullName>Flex Bundle Inbound</fullName>
            </value>
            <value>
                <fullName>Free Trial Create Inbound</fullName>
            </value>
            <value>
                <fullName>Get Customer CSP</fullName>
            </value>
            <value>
                <fullName>Installed Product Inbound</fullName>
            </value>
            <value>
                <fullName>Installed Product Outbound</fullName>
            </value>
            <value>
                <fullName>IVDR Document Download Interface</fullName>
            </value>
            <value>
                <fullName>IVDR Document Interface</fullName>
            </value>
            <value>
                <fullName>Knowledge Article Sync</fullName>
            </value>
            <value>
                <fullName>List Price Outbound</fullName>
            </value>
            <value>
                <fullName>Location Outbound</fullName>
            </value>
            <value>
                <fullName>Opportunity Outbound Example</fullName>
            </value>
            <value>
                <fullName>Order Attachment Outbound</fullName>
            </value>
            <value>
                <fullName>Order Outbound</fullName>
            </value>
            <value>
                <fullName>Parts Order Inbound</fullName>
            </value>
            <value>
                <fullName>Parts Order Outbound</fullName>
            </value>
            <value>
                <fullName>Proactive Run Metrics</fullName>
            </value>
            <value>
                <fullName>Product Hierarchy Inbound</fullName>
            </value>
            <value>
                <fullName>Product Outbound</fullName>
            </value>
            <value>
                <fullName>Quote Outbound</fullName>
            </value>
			
        </valueSetDefinition>
    </valueSet>
</CustomField>