force-app/main/default/objects/Interface_Log__c/fields/Log_Info__c.field-meta.xml
<CustomField>
    <fullName>Log_Info__c</fullName>
    <description>Field to store Log Info record Id on the Interface Log record</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Info</label>
    <referenceTo>Log_Info__c</referenceTo>
    <relationshipLabel>Interface Logs</relationshipLabel>
    <relationshipName>LogInfo_Interface_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>