force-app/main/default/objects/Interface_Log__c/fields/Related_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Type__c</fullName>
    <description>The kind of object this log is related to</description>
    <label>Related Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>