force-app/main/default/objects/Interface_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Success or Failure. Perhaps someday retry information.</description>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>