force-app/main/default/objects/Interface_Log__c/fields/Result_Details__c.field-meta.xml
<CustomField>
    <fullName>Result_Details__c</fullName>
    <description>Error or success messages associated with this integration message.</description>
    <label>Result Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>