force-app/main/default/objects/Interface_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interface_Name__c</columns>
    <columns>Result__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Interface_Name__c</field>
        <operation>contains</operation>
        <value>snap</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>