force-app/main/default/objects/Interface_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Related_Record__c</columns>
    <columns>Related_Record_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Interface_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>