force-app/main/default/objects/Interface_Log__c/listViews/Free_Trial.listView-meta.xml
<ListView>
    <fullName>Free_Trial</fullName>
    <columns>NAME</columns>
    <columns>Interface_Name__c</columns>
    <columns>Result__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Interface_Name__c</field>
        <operation>equals</operation>
        <value>Free Trial Create Inbound</value>
    </filters>
    <label>Free Trial</label>
    <language>en_US</language>
</ListView>